Agregado ejemplo de la clase de hoy y actualizados los apuntes

--- a/01 - Introducción a Python.ipynb
+++ b/01 - Introducción a Python.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Introducción a Python\n",
     "\n",
-    "El objetivo de este tema es familiarizar a los estudiantes con los conceptos básicos de la programación utilizando el lenguaje de programación Python. Se abordarán los siguientes conceptos:\n",
+    "El objetivo de este tema es familiarizarse con los conceptos básicos de la programación utilizando el lenguaje de programación Python. Se abordarán los siguientes conceptos:\n",
     "\n",
-    "* **Constates y variables**: Los estudiantes aprenderán a declarar y utilizar variables en un programa de Python.\n",
-    "* **Tipos y estructuras de datos**: Los estudiantes aprenderán sobre los diferentes tipos de datos en Python, incluyendo enteros, flotantes, cadenas y listas.\n",
-    "* **Operaciones y operadores**: Los estudiantes aprenderán a realizar operaciones aritméticas básicas en Python y a utilizar operadores lógicos.\n",
-    "* **Estructuras de control**: Los estudiantes aprenderán a utilizar estructuras de control de flujo, como los bucles y las condicionales, para controlar la ejecución de un programa.\n",
-    "* **Funciones y procedimientos**: Los estudiantes aprenderán a crear y llamar a funciones y procedimientos en Python para reutilizar código y mejorar la organización del programa.\n",
+    "* **Constates y variables**: Aprender a declarar y utilizar variables en un programa de Python.\n",
+    "* **Tipos y estructuras de datos**: Aprender sobre los diferentes tipos de datos en Python, incluyendo enteros, flotantes, cadenas y listas.\n",
+    "* **Operaciones y operadores**: Aprender a realizar operaciones aritméticas básicas en Python y a utilizar operadores lógicos.\n",
+    "* **Estructuras de control**: Aprender a utilizar estructuras de control de flujo, como los bucles y las condicionales, para controlar la ejecución de un programa.\n",
+    "* **Funciones y procedimientos**: Aprender a crear y llamar a funciones y procedimientos en Python para reutilizar código y mejorar la organización del programa.\n",
     "\n",
     "Algunos ejemplos de código que se pueden utilizar para ilustrar estos conceptos son:\n",
     "\n",
@@ -180,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (main, Dec 23 2022, 09:40:27) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
