Los cambios que faltaban

--- a/04 - Estructuras de Control.ipynb
+++ b/04 - Estructuras de Control.ipynb
@@ -113,12 +113,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es importante que los estudiantes comprendan y puedan aplicar estas estructuras de control de manera efectiva, ya que les permiten crear programas más complejos y flexibles. Se pueden incluir ejercicios que les permitan poner en práctica lo aprendido, por ejemplo:\n",
+    "En otros lenguajes de programación, utilizamos el bucle for para iterar a través de una lista de números, normalmente des de el 1 o el 0 hasta el número al que queramos acceder. Para realizar este tipo de iteración, en python hemos de utilizar la función `range` que es la encargada de devolver valores. Tiene varias sobre cargas, es decir, según los parámetros que le pasemos tendrá un comportamiento distinto, pero en el caso de utilizarla sólo con un entero, quivaldrá a la sentencia desde 0 hasta n-1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es importante comprender y aplicar estas estructuras de control de manera efectiva, ya que les permiten crear programas más complejos y flexibles. Se pueden incluir ejercicios que les permitan poner en práctica lo aprendido, por ejemplo:\n",
     "\n",
-    "* Escribir un programa que calcule la suma de los primeros n números enteros positivos utilizando un bucle for.\n",
-    "* Crear un programa que determine si un número es primo o no.\n",
-    "* Escribir un programa que convierta una lista de temperaturas en grados Celsius a grados Fahrenheit utilizando un bucle for.\n",
-    "* Estas actividades permiten a los estudiantes aplicar los conceptos y mejorar su comprensión de las estructuras de control."
+    "1. Escribir un programa que calcule la suma de los primeros n números enteros positivos utilizando un bucle for.\n",
+    "2. Crear un programa que determine si un número es primo o no.\n",
+    "3. Escribir un programa que convierta una lista de temperaturas en grados Celsius a grados Fahrenheit utilizando un bucle for.\n",
+    "\n",
+    "Estas actividades permiten aplicar los conceptos y mejorar su comprensión de las estructuras de control."
    ]
   }
  ],
@@ -138,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec 23 2022, 09:40:27) [Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
