--- a/03 - Operaciones y operadores.ipynb
+++ b/03 - Operaciones y operadores.ipynb
@@ -88,12 +88,12 @@
    "source": [
     "## Ejercicios\n",
     "\n",
-    "* Realice operaciones matemáticas con dos números y almacene el resultado en una variable.\n",
-    "* Compare dos números y almacene el resultado en una variable booleana.\n",
-    "* Combine dos expresiones booleanas utilizando los operadores lógicos.\n",
-    "* Escriba un programa que pida al usuario dos números y calcule su suma, resta, multiplicación, división, potencia y módulo.\n",
-    "* Escriba un programa que pida al usuario dos números y determine si el primero es mayor, menor o igual al segundo.\n",
-    "* Escriba un programa que determine si un número es par o impar."
+    "1. Realiza 5 operaciones matemáticas con dos números y almacena el resultado en una variable que identifique cada tipo de operación\n",
+    "2. Compara dos números y almacene el resultado en una variable booleana.\n",
+    "3. Combina dos expresiones booleanas utilizando los operadores lógicos.\n",
+    "4. Escribe un programa que pida al usuario dos números y calcule su suma, resta, multiplicación, división, potencia y módulo.\n",
+    "5. Escribe un programa que pida al usuario dos números y determine si el primero es mayor, menor o igual al segundo.\n",
+    "6. Escribe un programa que determine si un número es par o impar."
    ]
   }
  ],
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (main, Dec 23 2022, 09:40:27) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
