Agregadas listas y primer ejemplo de representación gráfica

--- a/04 - Estructuras de Control.ipynb
+++ b/04 - Estructuras de Control.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El número 6 es positivo\n"
+      "El número 5 es positivo\n"
      ]
     }
    ],
@@ -53,13 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6\n",
+      "5\n",
       "4\n",
       "3\n",
       "2\n",
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,6 +145,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Operador Range\n",
+    "\n",
+    "La función `range` en Python es una función que genera una secuencia de números. Es una herramienta muy útil para crear ciclos, como por ejemplo los ciclos `for`.\n",
+    "\n",
+    "La sintaxis básica de la función `range` es la siguiente:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "range(stop)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Donde `stop` es un entero que representa el límite superior de la secuencia de números generada. La secuencia comenzará en 0 y se incrementará de 1 en 1 hasta llegar a `stop`, excluyendo el número `stop` en sí.\n",
+    "\n",
+    "Hay una sobrecarga adicional de la función range que permite especificar un número inicial y un incremento. La sintaxis es la siguiente:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "range(start,stop,step)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Donde `start` es el número inicial de la secuencia, `stop` es el límite superior de la secuencia y `step` es el incremento que se aplicará en cada paso.\n",
+    "\n",
+    "Ejemplos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(2, 5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 10, 2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actividades\n",
+    "\n",
     "Es importante comprender y aplicar estas estructuras de control de manera efectiva, ya que les permiten crear programas más complejos y flexibles. Se pueden incluir ejercicios que les permitan poner en práctica lo aprendido, por ejemplo:\n",
     "\n",
     "1. Escribir un programa que calcule la suma de los primeros n números enteros positivos utilizando un bucle for.\n",
