--- a/05 - Funciones y Procedimientos.ipynb
+++ b/05 - Funciones y Procedimientos.ipynb
@@ -129,12 +129,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec 23 2022, 09:40:27) [Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1a1af0ee75eeea9e2e1ee996c87e7a2b11a0bebd85af04bb136d915cefc0abce"
+    "hash": "e4f73847c287cd293586ad0d22a16534048a93d7a557aef64fbf2ed64d21bfbf"
    }
   }
  },
