Arreglado el problema y documentado lo que faltaba

--- a/07 - Utilizacion de Librerias para Representar funciones.ipynb
+++ b/07 - Utilizacion de Librerias para Representar funciones.ipynb
@@ -91,9 +91,13 @@
     "\n",
     "Una vez estemos seguros de que podemos ejecutar `python3 -m pip --help` vamos a proceder a instalar matplotlib en nuestro sistema, para ello seguimos los pasos que nos recomienda en la página oficial: <https://matplotlib.org/stable/users/installing/index.html> \n",
     "\n",
-    "```python\n",
-    "python3 -m pip install -U pip\n",
+    "```bash\n",
+    "\n",
+    "python3 https://bootstrap.pypa.io/get-pip.py\n",
+    "python3 get-pip.py # Puede que dé algún problema\n",
     "python3 -m pip install -U matplotlib\n",
+    "\n",
+    "\n",
     "```\n",
     "\n",
     "> He tenido que adaptar el código porque en Lliurex es necesario utilizar python3. \n",
