Arreglado error con wget de copy-paste

--- a/07 - Utilizacion de Librerias para Representar funciones.ipynb
+++ b/07 - Utilizacion de Librerias para Representar funciones.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "```bash\n",
     "\n",
-    "python3 https://bootstrap.pypa.io/get-pip.py\n",
+    "wget https://bootstrap.pypa.io/get-pip.py\n",
     "python3 get-pip.py # Puede que dé algún problema\n",
     "python3 -m pip install -U matplotlib\n",
     "\n",
